# todoscanner

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: config.rs  main.rs  matcher.rs  output.rs  scanner.rs
tests/: integration.rs
tests/fixtures/: sample.c  sample.js  sample.py  sample.rs  sample.txt
