[package]
name = "todoscanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todoscan"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
ignore = "0.4"
regex = "1"
colored = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
